--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prebuild": "rimraf ./build/ ./bin/ && cpx-fixed \"views/**/*.*\" build/views",
     "build": "run-s build:typescript build:bin",
     "build:typescript": "tsc",
+    "build:linux": "pkg build/sleepingServerStarter.js --config package.json --compress GZip --target node22-linux-x64 --out-path ./bin/",
     "build:bin": "pkg build/sleepingServerStarter.js --config package.json --compress GZip --target node22-win-x64,node22-linux-x64,node22-linux-arm64,node22-macos-x64,node22-macos-arm64,node22-alpine-arm64 --out-path ./bin/",
     "lint": "eslint . --ext .ts --fix",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
